# universal_approximation_proof

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: create_gif.py  model.py  proof_of_universal_approximation.py  target_functions.py
